--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,6 +1,8 @@
-.section {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+html {
+  display: grid;
+  grid-template-rows: repeat(3, 100vh);
 }
+
+section {
+  height: 100vh;
+} 
