--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*:after,
+*::before {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 50%;
+}
+
+body {
+  margin: 0;
+}
+
 html {
   display: grid;
   grid-template-rows: repeat(3, 100vh);
@@ -12,21 +32,23 @@ section {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
+  margin: 3rem;
 }
 .presentation__title {
   display: block;
   color: black;
-  font-size: 42px;
-  margin-bottom: 8px;
+  font-size: 5rem;
+  margin-bottom: 1rem;
 }
 .presentation__subtitle {
   display: block;
   color: grey;
-  font-size: 24px;
-  margin-top: 8px;
+  font-size: 3rem;
+  margin-top: 1rem;
 }
 .presentation__subtitle--clarification {
-  font-size: 20px;
+  font-size: 2rem;
   font-style: italic;
 }
 .presentation .personal-links {
@@ -35,10 +57,10 @@ section {
   justify-content: center;
 }
 .presentation .personal-links__item {
-  margin: 16px;
+  margin: 2rem;
 }
 .presentation .personal-links__item img {
-  height: 32px;
+  height: 3rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
