--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,2 +1,22 @@
 $font-primary: black;
 $font-secondary: grey;
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*:after,
+*::before {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 50%; // 1rem = 8px
+}
+
+body {
+  margin: 0;
+}
