--- a/sass/components.scss
+++ b/sass/components.scss
@@ -3,22 +3,25 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
+  margin: 3rem;
 
   &__title {
     display: block;
     color: $font-primary;
-    font-size: 42px;
-    margin-bottom: 8px;
+    font-size: 5rem;
+    margin-bottom: 1rem;
   }
 
   &__subtitle {
     display: block;
     color: $font-secondary;
-    font-size: 24px;
-    margin-top: 8px;
+    
+    font-size: 3rem;
+    margin-top: 1rem;
 
     &--clarification {
-      font-size: 20px;
+      font-size: 2rem;
       font-style: italic;
     }
   }
@@ -29,9 +32,9 @@
     justify-content: center;
 
     &__item {
-      margin: 16px;
+      margin: 2rem;
       img {
-        height: 32px;
+        height: 3rem;
       }
     }
   }
